test/vm/errors/parser/bad_type_lowercase_bool.ach
// Parser error: lowercase bool type with hint
// Expected: error with suggestion "(did you mean `Bool`?)"

public flag: bool
